Update and rename 09-Classification-Exercise-Solution.ipynb to California-Census.ipynb

--- a/California Census/California-Census.ipynb
+++ b/California Census/California-Census.ipynb
@@ -6,7 +6,7 @@
     "collapsed": true
    },
    "source": [
-    "# Classification Exercise - Solutions"
+    "# California-Census"
    ]
   },
   {
