Update and rename 07-Regression-Exercise-Solutions-Final.ipynb to House_Price_Regression.ipynb

--- a/House Price Prediction/House_Price_Regression.ipynb
+++ b/House Price Prediction/House_Price_Regression.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Regression Exercise - Solutions\n",
+    "# Housing Price Regression\n",
     "\n",
     "California Housing Data\n",
     "\n",
